load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com:hegemone/io/cmd/io",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_hegemone_io//pkg/server:go_default_library",
        "@com_github_hegemone_io//pkg/user:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//testdata:go_default_library",
    ],
)

go_binary(
    name = "io",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
